--- a/src/Components/NavBar/Navbar.css
+++ b/src/Components/NavBar/Navbar.css
@@ -1,24 +1,21 @@
-.brand-name-heading{
-    /* color: #ffffff; */
-}
+
 .btn-login-navbar{
-    outline: 2px solid #5FBFF7;
-    color: #090437;
+    outline: 1px solid var(--skin-color-primary);
+    color: var(--title-color);
     transition: 0.4s;
 }
 .btn-login-navbar:hover{
-    outline: 2px solid #FF7700;
-    background-color: #FF7700;
-    color: white;
+    background-color: var(--skin-color-primary);
+    color: var(--btn-color);
 }
 .btn-create-navbar{
-    background-color: #0008FF;
-    color: white;
+    background-color: var(--skin-color-second);
+    color: var(--btn-color);
 }
 
 .nav-hamburger-btn{
-    background-color: #0008FF;
-    color: white
+    background-color: var(--skin-color-second);
+    color: var(--btn-color);
 }
 
 @media only screen and (min-width: 600px) {
