--- a/src/Components/NavBar/Navbar.css
+++ b/src/Components/NavBar/Navbar.css
@@ -1,4 +1,6 @@
-
+/* .brand-name-heading{
+    color: var(--btn-color);
+} */
 .btn-login-navbar{
     outline: 1px solid var(--skin-color-primary);
     color: var(--title-color);
