--- a/src/Pages/LoginandSignupPages/Login/Login.css
+++ b/src/Pages/LoginandSignupPages/Login/Login.css
@@ -1,8 +1,7 @@
 .login-main{
-    /* background-image:url(/src/assets/svg/loginBack.svg); */
+    background-image:url(/src/assets/svg/loginBack.svg);
     background-repeat: no-repeat;
     background-size: cover;
-    background-position: center;
     height: 100vh;
 }
 .login-child-container{
