--- a/src/index.css
+++ b/src/index.css
@@ -2,54 +2,67 @@
 @tailwind components;
 @tailwind utilities;
 
-@import url('https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;500;600;700;800&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;500;600;700;800&display=swap");
 
 /*=============== BASE ===============*/
 
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Kumbh Sans', sans-serif;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Kumbh Sans", sans-serif;
 }
-html{
-    scroll-behavior: smooth;
+html {
+  scroll-behavior: smooth;
 }
-body{
-    background-color: #EBECED;
+body {
+  background-color: #ebeced;
 }
-ul{
-    list-style: none;
+ul {
+  list-style: none;
 }
-a{
-    text-decoration: none;
+a {
+  text-decoration: none;
 }
-img{
-    max-width: 100%;
-    height: auto;
+img {
+  max-width: 100%;
+  height: auto;
 }
-button{
-    cursor: pointer;
+button {
+  cursor: pointer;
 }
 button,
-input{
-    border: none;
-    outline: none;
+input {
+  border: none;
+  outline: none;
 }
 
 /*=============== VARIABLES CSS ===============*/
 :root {
-    /*===== Colors =====*/
-    --skin-color-primary: #FF7700;
-    --skin-color-second: #080ECB;
-    --title-color: #090437;
-    --text-color: #777777;
-    --body-color: #EBECED;
-    --box-color: #FBFBFB;
-    --btn-color: #FFFFFF;
-    --black-color: #1D2025;
-    --scroll-bar-color: hsl(var(--hue-color), 12%, 38%);
-    --scroll-thumb-color: hsl(var(--hue-color), 12%, 26%);
+  /*===== Colors =====*/
+  --skin-color-primary: #ff7700;
+  --skin-color-second: #080ecb;
+  --title-color: #090437;
+  --text-color: #474747;
+  --body-color: #ebeced;
+  --box-color: #fbfbfb;
+  --btn-color: #ffffff;
+  --black-color: #1d2025;
+  --scroll-bar-color: hsl(var(--hue-color), 12%, 38%);
+  --scroll-thumb-color: hsl(var(--hue-color), 12%, 26%);
 
-    /* 001220 */
+  /* 001220 */
+}
+
+[data-theme="light"] {
+  /*===== Colors =====*/
+  --skin-color-primary: #ff7700;
+  --skin-color-second: #080ecb;
+  --title-color: #090437;
+  --text-color:#1d2025;
+  --body-color: #001220;
+  --box-color: #fff;
+  --btn-color: #ffffff;
+  --scroll-bar-color: hsl(var(--hue-color), 12%, 62%);
+  --scroll-thumb-color: hsl(var(--hue-color), 12%, 74%);
 }
