--- a/src/Pages/LoginandSignupPages/Login/Login.css
+++ b/src/Pages/LoginandSignupPages/Login/Login.css
@@ -1,13 +1,20 @@
-.login-main{
+.login-main-light{
     background-image:url(/src/assets/svg/loginBack.svg);
     background-repeat: no-repeat;
     background-size: cover;
     height: 100vh;
 }
+.login-main-dark{
+    background-image:url(/src/assets/svg/loginDark.svg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 100vh;
+}
 .login-child-container{
-     background-color: var(--btn-color);
+     background-color: var(--box-color);
      /* box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px; */
      box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 70px 4px;
+     color: var(--text-color);
 }
 .login-form-input-div{
     background: var(--body-color);
@@ -15,6 +22,7 @@
 }
 .login-form-input{
     background: var(--body-color);
+    color: var(--text-color);
 }
 .login-form-btn-login{
     background: var(--skin-color-second) !important;
@@ -22,4 +30,8 @@
 }
 .login-form-btn-loginwithgoogle{
     background: var(--body-color);
+    color: var(--text-color);
+}
+.icon-color{
+    color: var(--logo-color);
 }
