--- a/src/Pages/LoginandSignupPages/Login/Login.css
+++ b/src/Pages/LoginandSignupPages/Login/Login.css
@@ -15,6 +15,8 @@
      /* box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px; */
      box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 70px 4px;
      color: var(--text-color);
+     background: linear-gradient(var(--box-color), var(--box-color)) padding-box, linear-gradient(70deg, transparent 35%,#080ecb, #ff7700) border-box;
+     border: 2px solid transparent;
 }
 .login-form-input-div{
     background: var(--body-color);
